2004-09-14  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in: added format partition directive
	
	* partition.pl.in: moved some code from disks-conf.in to
	partition.pl.in

2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in (xml_print_statichost): moved to network.pl.in
	* network.pl.in (network_xml_print_statichost): added
	* parse.pl.in: fixed a bug when searching in .ini like files, now
	it stops at the end of the section
	* share.pl.in, shares-conf.in: removed/comented unused code, made
	it safe to store info in modern systems, added the get_network_conf
	directive
	* xml.pl.in: fixed a badly indented line

2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* shares-conf.in: made "/etc/exports" the default NFS exports file
	for all distros, this is pretty standard
	* share.pl.in, shares-conf.in: small fixes, made it work (at least 
	the SMB exports) with all the distributions that network-conf 
	already supports
	* users-conf.in: Added <allows_to> tag for some groups.

2004-09-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.0

2004-09-13  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2004-09-12  Mugurel Tudor  <mugurelu@go.ro>

	* configure.in: Added "ro" to ALL_LINGUAS

2004-09-08  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" and "zh_CN" to ALL_LINGUAS.

2004-09-08  Arafat Medini  <lumina@arabeyes.org>

	* configure.in: Added Arabic locale "ar" to ALL_LINGUAS.

2004-09-03  Jayaradha <njaya@redhat.com>

	* configure.in: Added ta to ALL_LINGUAS
2004-09-02  Ilkka Tuohela <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2004-09-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 0.92

2003-09-01  Hasbullah Bin Pit  <sebol@my-penguin.org>
                                                                                
        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.
