@@ -1,3 +1,8 @@
+2004-09-18  Carlos Garcia Campos <carlosgc@gnome.org>
+
+	* disks-conf.in: removed the report messages merged with the xml
+	output in disk_info directive
+
 2004-09-14  Carlos Garcia Campos <carlosgc@gnome.org>
 
 	* disks-conf.in: added format partition directive
